# falcon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.cmake  update_libigl.sh  update_minc2simple.sh  update_spectra.sh  update_zstr.sh
cmake/: libigl.cmake
data/: apply_falcon_to_template.sh  create_cerebra_surface_atlas.sh  falcon_run_v2_d.sh  mni_icbm152_t1_tal_nlin_sym_09c_mask.mnc  register_adni_to_icbm152_09c.sh  template.pov  template_face.pov
data/NVK/: nifti1_kunio_viewer_file_bar_ui.xml
data/adni_model_3d_v2/: adni_model_3d_v2_init_ics_lt.ply  adni_model_3d_v2_init_ics_rt.ply  atlas_CerebrA.mnc  model_t1w_mask.mnc
data/icbm152_model_09c/: cerebra_surface_labels.csv  mni_icbm152_CerebrA_tal_nlin_sym_09c.mnc  mni_icbm152_gm_tal_nlin_ctx_mask.mnc  mni_icbm152_ics_sm_lt.ply  mni_icbm152_ics_sm_rt.ply  mni_icbm152_ocs_lt_atlas_dirty.txt  mni_icbm152_ocs_rt_atlas_dirty.txt  mni_icbm152_t1_tal_nlin_sym_09c_2mm_CLADA_cerebellum.mnc  mni_icbm152_t1_tal_nlin_sym_09c_2mm_eyes.mnc  mni_icbm152_t1_tal_nlin_sym_09c_2mm_padded_8x8x0.mnc  mni_icbm152_t1_tal_nlin_sym_09c_CLADA_brainstem.mnc  mni_icbm152_t1_tal_nlin_sym_09c_CLADA_fill_mask.mnc  mni_icbm152_t1_tal_nlin_sym_09c_CLADA_midsagittal_plane_CC.mnc  mni_icbm152_t1_tal_nlin_sym_09c_CLADA_midsagittal_plane_CC2.mnc  mni_icbm152_t1_tal_nlin_sym_09c_CLADA_midsagittal_plane_CC4.mnc  mni_icbm152_t1_tal_nlin_sym_09c_CLADA_nonctx_mask_2mm.mnc  mni_icbm152_t1_tal_nlin_sym_09c_CLADA_remove_mask.mnc  mni_icbm152_t1_tal_nlin_sym_09c_deep2_4_cerebellum_dilate.mnc  mni_icbm152_t1_tal_nlin_sym_09c_init_ics_lt.mnc  mni_icbm152_t1_tal_nlin_sym_09c_init_ics_lt.ply  mni_icbm152_t1_tal_nlin_sym_09c_init_ics_lt_atlas_dirty.txt  mni_icbm152_t1_tal_nlin_sym_09c_init_ics_rt.mnc  mni_icbm152_t1_tal_nlin_sym_09c_init_ics_rt.ply  mni_icbm152_t1_tal_nlin_sym_09c_init_ics_rt_atlas_dirty.txt  mni_icbm152_t2_tal_nlin_sym_09c_2mm_padded_8x8x0.mnc
data/miccai2012_challenge/: README  prior_brainstem.mnc  prior_cerebellum.mnc  prior_deep_gm.mnc  prior_hc.mnc  prior_ventricles.mnc  tissue_prior8_1.mnc  tissue_prior8_4.mnc  tissue_prior8_5.mnc  tissue_prior8_7.mnc  tissue_prior_1.mnc  tissue_prior_2.mnc  tissue_prior_3.mnc
data/miccai2012_challenge_ad/: prior_brainstem.mnc  prior_cerebellum.mnc  prior_deep_gm.mnc  prior_hc.mnc  prior_ventricles.mnc  tissue_prior8_1.mnc  tissue_prior8_3.mnc  tissue_prior8_4.mnc  tissue_prior8_5.mnc  tissue_prior8_6.mnc  tissue_prior8_7.mnc
example/: CMakeLists.txt
example/RInside/: CMakeLists.txt
example/lua/: xfm_distance.lua
example/python/: image_classify.py  test.py  test_metadata.py
example/torch/: CMakeLists.txt
include/igl/embree/: EmbreeRenderer.h
lua/: init.lua
python/minc2_simple/: minc2_simple.py  utils.py
python/test/: minc2_file.py  minc2_tags.py  minc2_xfm.py
src/: CMakeLists.txt  dbh.h  falcon.c  falcon.h  falcon_3vw.h  falcon_PABIC.c  falcon_affine.c  falcon_ann.h  falcon_aregister.c  falcon_aregister2.c  falcon_bimodal_fit.c  falcon_bla.c  falcon_bounds.c  falcon_bseg.c  falcon_calc.c  falcon_classifier.c  falcon_classify_fcm.c  falcon_classify_kmeans.c  falcon_config.c  falcon_config.h.cmake  falcon_cortex.c  falcon_cortex.h  falcon_cortex_debug.c  falcon_cortex_deformation.c  falcon_cortex_edge.c  falcon_cortex_initics.c  falcon_cortex_initocs.c  falcon_cortex_smoothing.c  falcon_csv_stats.c  falcon_ctx_gwi.c  falcon_curve_fitting.c  falcon_dbc.c  falcon_distance_map.c  falcon_fann_segment_lesion.h  falcon_feature_map.c  falcon_field_smooth.c  falcon_hipposurf.h  falcon_histogram.c  falcon_image_inline.h  falcon_inline.h  (+140 more)
src/NrrdIO/: CMakeLists.txt  axis.c  biffmsg.c  encodingGzip.c  methodsNrrd.c  privateNrrd.h
src/igl/: CMakeLists.txt  Guigue2003_tri_tri_intersect.cpp  Guigue2003_tri_tri_intersect.h  Guigue2003_tri_tri_intersect_t_slower.h  depth_potential.cpp  depth_potential.h  fem_system.cxx  fem_system.h  field_depth.cpp  field_eig.cpp  field_resample.cpp  field_sampler.cpp  igl_any2obj.cpp  igl_obj.cpp  igl_obj2any.cpp  laplace_field.cpp  marching_cubes.cpp  mesh_avg.cpp  mesh_debug.cpp  mesh_decimate.cpp  mesh_intersect.cpp  mesh_render.cpp  mesh_smooth.cpp  mesh_split.cpp  mesh_transform.cpp  mesh_voxelize.cpp  midsag.cpp  minc_volume.h  multilabel_overlap.cpp  readMNIObj.cpp  readMNIObj.h  surface_demons.cpp  tritri_isect.h  util.h  view_field.cpp  writeMNIObj.cpp  writeMNIObj.h
src/igl/png/: igl_stb_image.h  readPNG.cpp  readPNG.h  writePNG.cpp  writePNG.h
test/: .gitignore  CMakeLists.txt  make_complex_phantom.sh  make_simple_phantom.sh  make_square_boundary_condition.sh  run_falcon.sh  run_falcon2.sh  run_surface_refine.sh  run_surface_tools.sh  simple_cortex_thickness.sh  sulcus_2layers.mnc  sulcus_2layers_noisy.mnc  table.csv  tags.tag  test-io-hyper.c  test-io-iterator.c  test-nan-float.mnc  test-nan.c  test.ply  test_morphology.sh  test_off.c  test_text_io.c  thickness_qc_test.sh
tests/include/igl/png/: read_write.cpp
tutorial/607_ScreenCapture/: CMakeLists.txt
